app/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Vorlage zur Bereitstellung einer EC2-Instanz mit Elastic IP, Git, Apache und NVM in eu-central-1

Parameters:
  KeyName:
    Description: Name eines vorhandenen EC2-Schluesselpaares fuer den SSH-Zugriff
    Type: AWS::EC2::KeyPair::KeyName
    Default: EventAufgabenPlaner  #Fallback-Wert, falls keiner in der env Datei übergeben wurde
    ConstraintDescription: Muss der Name eines bestehenden EC2-Schluesselpaares sein.
  InstanceType:
    Description: EC2-Instanztyp
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
    ConstraintDescription: Muss einen gueltigen EC2-Instanztyp angeben.
  SSHLocation:
    Description: Die IP-Adresse, die SSH-Zugriff auf die EC2-Instanz erhält.
    Type: String
    Default: 0.0.0.0/0
    ConstraintDescription: Muss eine gueltige CIDR-Notation sein.
  AmiParameter:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64"   #holt hier immer die aktuelle AMI-ID, für die Amazon Linux 2023 AMI


Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: !Ref AmiParameter  # Verweis auf den Parameter für die neueste Amazon Linux 2023 AMI-ID
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: EventAufgabenPlaner-Instance-Test2
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Updates und Installation von Apache, Git und anderen Abhängigkeiten
          sudo yum update -y
          sudo yum install -y httpd git

          # Apache starten und aktivieren
          systemctl start httpd
          systemctl enable httpd

          
  
          # NVM installieren
          echo "NVM wird installiert..." >> /var/log/user-data.log
          su ec2-user -l -c "curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash" >> /var/log/user-data.log 2>&1
          
          # NVM in die Shell laden und Node.js installieren
          su ec2-user -l -c "export NVM_DIR=\"/home/ec2-user/.nvm\" && [ -s \"\$NVM_DIR/nvm.sh\" ] && . \"\$NVM_DIR/nvm.sh\" && nvm install --lts" >> /var/log/user-data.log 2>&1

          # Testen, ob NVM installiert wurde
          su ec2-user -l -c "export NVM_DIR=\"/home/ec2-user/.nvm\" && [ -s \"\$NVM_DIR/nvm.sh\" ] && . \"\$NVM_DIR/nvm.sh\" && nvm --version" >> /var/log/user-data.log 2>&1

          
          # Node.js installieren mit NVM
          su ec2-user -l -c "nvm install --lts"

          # Git-Repository klonen
          su ec2-user -l -c "git clone https://github.com/alexanderkutzer/praxisprojekt-EventAufgabenPlaner.git ~/praxisprojekt-EventAufgabenPlaner"

          # Überprüfen, ob das Klonen erfolgreich war
          if [ -d "/home/ec2-user/praxisprojekt-EventAufgabenPlaner" ]; then
            echo "Repository wurde erfolgreich geklont."
          else
            echo "Fehler: Repository konnte nicht geklont werden." >> /var/log/user-data.log
          fi

          # In das Projektverzeichnis navigieren, Überprüfung und Anwendung starten
          su ec2-user -l -c "

            cd /home/ec2-user/praxisprojekt-EventAufgabenPlaner/app/view && 
            if [ \"\$(pwd)\" == \"/home/ec2-user/praxisprojekt-EventAufgabenPlaner/app/view\" ]; then
              echo 'Erfolg: Erfolgreich in das Verzeichnis vier gewechselt.' >> /var/log/user-data.log
              sleep 5
              npm install
              sleep 5
              npm run build:server
            else
              echo 'Fehler: Konnte nicht in das Verzeichnis wechseln.' >> /var/log/user-data.log
            fi

            # Wechsle ins dist-Verzeichnis und überprüfe es
            cd /home/ec2-user/praxisprojekt-EventAufgabenPlaner/app/view/dist
            if [ \"\$(pwd)\" == \"/home/ec2-user/praxisprojekt-EventAufgabenPlaner/app/view/dist\" ]; then
              echo 'Erfolg: Erfolgreich in das dist-Verzeichnis gewechselt.' >> /var/log/user-data.log
              sudo cp -r * /var/www/html
            else
              echo 'Fehler: Konnte nicht in das dist-Verzeichnis wechseln.' >> /var/log/user-data.log
              exit 1
            fi


            # API starten
            cd /home/ec2-user/praxisprojekt-EventAufgabenPlaner/app/api
            sleep5

            npm install
            sleep5
            npm run start

            curl http://localhost:3000 -X POST 
            if[$? -ne 0]; then 
              echo "Api läuft nicht"
            fi

          "




  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Sicherheitsgruppe fuer EC2-Instanz
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: EventAufgabenPlaner-SG

  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref EC2Instance

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: EventAufgabenPlaner-VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: EventAufgabenPlaner-IGW

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: EventAufgabenPlaner-PublicSubnet

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: EventAufgabenPlaner-RouteTable

  Route:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref RouteTable

Outputs:
  InstancePublicIP:
    Description: Oeffentliche IP-Adresse der EC2-Instanz
    Value: !Ref ElasticIP

  InstancePublicDNS:
    Description: OEffentlicher DNS-Name der EC2-Instanz
    Value: !GetAtt EC2Instance.PublicDnsName

  WebURL:
    Description: URL der Anwendung
    Value: !Sub "http://${ElasticIP}"
