app/template2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Vorlage zur Bereitstellung einer EC2-Instanz mit Elastic IP, Git, Apache und NVM in eu-central-1

Parameters:
  KeyName:
    Description: Name eines vorhandenen EC2-Schluesselpaares fuer den SSH-Zugriff
    Type: AWS::EC2::KeyPair::KeyName
    Default: EventAufgabenPlaner
    ConstraintDescription: Muss der Name eines bestehenden EC2-Schluesselpaares sein.
  InstanceType:
    Description: EC2-Instanztyp
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
    ConstraintDescription: Muss einen gueltigen EC2-Instanztyp angeben.
  SSHLocation:
    Description: Die IP-Adresse, die SSH-Zugriff auf die EC2-Instanz erhält.
    Type: String
    Default: 0.0.0.0/0
    ConstraintDescription: Muss eine gueltige CIDR-Notation sein.

Resources:
  WaitHandle:
    Type: AWS::CloudFormation::WaitConditionHandle

  WaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    DependsOn: AttachGateway  # abhängig von der Netzwerkinstallation
    Properties:
      Handle: !Ref WaitHandle
      Timeout: "600"

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: ami-0e6a13e7a5b66ff4d  # Amazon Linux 2 AMI-ID für eu-central-1
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: EventAufgabenPlaner-Instance
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Warten auf den WaitCondition-Signal
          yum update -y
          yum install -y httpd git
          systemctl start httpd
          systemctl enable httpd
          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash
          source ~/.nvm/nvm.sh
          nvm install 18
          cd ~
          git clone https://github.com/alexanderkutzer/praxisprojekt-EventAufgabenPlaner.git

          # In das Projektverzeichnis navigieren und die Anwendung starten
          cd /home/ec2-user/praxisprojekt-EventAufgabenPlaner/app/view
          npm install
          npm run dev


  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Sicherheitsgruppe fuer EC2-Instanz
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: EventAufgabenPlaner-SG

  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref EC2Instance

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: EventAufgabenPlaner-VPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: EventAufgabenPlaner-IGW

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: EventAufgabenPlaner-PublicSubnet

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: EventAufgabenPlaner-RouteTable

  Route:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref RouteTable

Outputs:
  InstancePublicIP:
    Description: Oeffentliche IP-Adresse der EC2-Instanz
    Value: !Ref ElasticIP

  InstancePublicDNS:
    Description: OEffentlicher DNS-Name der EC2-Instanz
    Value: !GetAtt EC2Instance.PublicDnsName

  WebURL:
    Description: URL der Anwendung
    Value: !Sub "http://${ElasticIP}"
